Build with Java 7